# novel-scraper

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
output/: .gitkeep
scraper/: __init__.py  settings.py  utils.py
scraper/spiders/: __init__.py  novel_spider.py
scripts/: import_to_api.py
