[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novel-scraper"
version = "1.0.0"
description = "Web scraper for collecting book/novel data from public websites"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "manggaladev", email = "manggaladev@users.noreply.github.com"}
]
keywords = ["scraper", "novel", "books", "web-scraping", "beautifulsoup"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[project.scripts]
novel-scraper = "main:main"

[project.urls]
Homepage = "https://github.com/manggaladev/novel-scraper"
Repository = "https://github.com/manggaladev/novel-scraper"
Issues = "https://github.com/manggaladev/novel-scraper/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["scraper*"]
